test/conformance/chainsaw/mutating-policies/existing/same-name-as-nmpol/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-same-name-ns
